[package]
name = "p3-mersenne-31"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
nightly-features = []

[dependencies]
itertools.workspace = true
p3-dft.workspace = true
p3-field.workspace = true
p3-matrix.workspace = true
p3-mds.workspace = true
p3-maybe-rayon.workspace = true
p3-poseidon2.workspace = true
p3-symmetric.workspace = true
p3-util.workspace = true
num-bigint.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
criterion.workspace = true
p3-field-testing.workspace = true
rand_chacha.workspace = true
rand_xoshiro.workspace = true
p3-commit.workspace = true
p3-merkle-tree.workspace = true
p3-circle.workspace = true
p3-fri.workspace = true
p3-challenger.workspace = true

[[bench]]
name = "bench_field"
harness = false

[[bench]]
name = "extension"
harness = false

[[bench]]
name = "bench_commit"
harness = false